# RVCAM

./: CMakeLists.txt  Dockerfile  README.md  flake.nix
include/: constants.sv
src/: adder.sv  alu.sv  hart.sv  hazard-unit.sv  imm-decoder.sv  imm_decoder.sv  main.cpp  reg-file.sv  reg_file.sv  top.sv
src/control-unit/: alu-decoder.sv  control-unit.sv  main-decoder.sv  pc-source-decoder.sv
src/memory/: data-memory.sv  instruction-memory.sv
src/pipeline/: data-path.sv  hazard-unit.sv
src/pipeline/decode/: decode.sv  reg-file.sv
src/pipeline/execute/: alu-arg-source.sv  execute.sv  pc-source-decoder.sv
src/pipeline/fetch/: fetch.sv  next-pc.sv
src/pipeline/write-back/: write-back.sv
src/utils/: adder-nzcv.sv  adder.sv  alu.sv  enabled-flip-flop-with-clear.sv  enabled-flip-flop.sv  flip-flop-with-clear.sv  flip-flop.sv
